/metrics/all endpoint
